fixing merge divergencies with kpis