@@ -1,38 +1,42 @@
 package com.springboot.MyTodoList.config;
 
-import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-/*
-   This class configures CORS, and specifies which methods are allowed
-   along with which origins and headers
-   @author: peter.song@oracle.com
-
-*/
+/**
+ * Configuración de CORS para permitir peticiones del frontend local y producción.
+ * Also includes setup for development environment testing (author: peter.song@oracle.com)
+ */
 @Configuration
 public class CorsConfig {
-  Logger logger = LoggerFactory.getLogger(CorsConfig.class);
+    Logger logger = LoggerFactory.getLogger(CorsConfig.class);
 
-  public CorsFilter corsFilter() {
-    CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(
-        List.of(
-            "http://localhost:3000",
-            "https://objectstorage.us-phoenix-1.oraclecloud.com",
-            "https://petstore.swagger.io"));
-    config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
-    config.setAllowedOrigins(Collections.singletonList("*"));
-    config.addAllowedHeader("*");
-    config.addExposedHeader("location");
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", config);
-    CorsFilter filter = new CorsFilter(source);
-    return filter;
-  }
+    @Bean
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
+        
+        // Secure and explicit origins (only these allowed)
+        config.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "https://objectstorage.us-phoenix-1.oraclecloud.com",
+                "https://petstore.swagger.io"
+        ));
+        
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
+        config.addAllowedHeader("*");
+        config.addExposedHeader("location");
+        config.setAllowCredentials(true); // allows sending cookies/auth headers
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+
+        logger.info("✅ CORS configurado correctamente");
+        return new CorsFilter(source);
+    }
 }
